[gd_scene load_steps=2 format=3 uid="uid://bsbuncoo1goih"]

[ext_resource type="Script" path="res://Scripts/levels.gd" id="1_cg34y"]

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cg34y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="1" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "1"

[node name="2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "2
"

[node name="3" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "3"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="4" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "4"

[node name="5" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "5
"

[node name="6" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "6"

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer"]
layout_mode = 2
vertical = true

[node name="Button" type="Button" parent="VBoxContainer/BoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="VBoxContainer/BoxContainer/Button" to="." method="_on_button_pressed"]
